--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 hs_err_pid*
 
 *bootstrap*
+# Ignore Gradle project-specific cache directory
+#.gradle
+
+# Ignore Gradle build output directory
+build
