--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,4 +23,6 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
+      run: ./gradlew build
+    - name: Run tests
       run: ./gradlew test
