--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
-
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version:'3.7.2'
     implementation group: 'com.sparkjava', name: 'spark-core', version:'2.9.2'
     implementation group: 'com.sparkjava', name: 'spark-template-velocity', version:'2.7.1'
     implementation 'com.google.code.gson:gson:2.8.5'
