--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,12 @@
 *.zip
 *.tar.gz
 *.rar
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 *bootstrap*
 # Ignore Gradle project-specific cache directory
-#.gradle
+.gradle
 
 # Ignore Gradle build output directory
 build
