--- a/.gitignore
+++ b/.gitignore
@@ -18,15 +18,13 @@
 *.tar.gz
 *.rar
 
-
-.gradle/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 modules/
 *bootstrap*
 # Ignore Gradle project-specific cache directory
-#.gradle
+.gradle
 
 # Ignore Gradle build output directory
 build
