--- a/app/src/main/resources/static/package.json
+++ b/app/src/main/resources/static/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.8.2",
+    "bootstrap": "^5.0.0-beta2",
+    "bootstrap-icons": "^1.3.0",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
