--- a/app/src/main/resources/static/package.json
+++ b/app/src/main/resources/static/package.json
@@ -16,7 +16,8 @@
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
