--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ modules/
 # Ignore Gradle project-specific cache directory
 .gradle
 
+app/bin
+app/src/main/resources/static/js/dist/index.js
+app/database/database.db
 # Ignore Gradle build output directory
 build
 
