updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,15 @@ hs_err_pid*
 
 modules/
 *bootstrap*
+
 # Ignore Gradle project-specific cache directory
 .gradle
 
 # Ignore Gradle build output directory
 build
+app/bin
+app/src/main/resources/static/js/dist/index.js
+app/database/database.db
 
 # node modules
 node_modules/
