--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,6 @@ app/src/main/resources/static/js/dist/index.js
 app/database/database.db
 # Ignore Gradle project-specific cache directory
 .gradle
-
+.vscode
 # Ignore Gradle build output directory
 build
