--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ modules/
 
 # Ignore Gradle project-specific cache directory
 .gradle
-
+.vscode
 # Ignore Gradle build output directory
 build
 app/bin
