--- a/Project/.project
+++ b/Project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Project</name>
+	<name>cs261</name>
 	<comment>Project Project created by Buildship.</comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1614870211981</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
