--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ app/database/database.db
 build
 app/bin
 app/src/main/resources/static/js/dist/index.js
-app/database/database.db
+database.db
 
 
 # node modules
