--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11.0.10
+    - name: Change directory
+      run: cd ./Project
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
