--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,11 +20,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11.0.10
-    - name: Change directory
-      run: cd ./Project
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x Project/gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: Project/gradlew build
     - name: Run tests
-      run: ./gradlew test
+      run: Project/gradlew test
