--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11.0.10
+    - name: Set up NPM version 14
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
     - name: Grant execute permission for gradlew
       run: chmod +x Project/gradlew
     - name: Build with Gradle
