--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.slf4j:slf4j-simple:1.7.21'
+    implementation 'org.python:jython-slim:2.7.2'
 }
 
 application {
