--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -32,8 +32,10 @@ dependencies {
     implementation group: 'com.github.sharispe', name: 'slib-sml', version:'0.9.1'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
     implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
+
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.slf4j:slf4j-simple:1.7.21'
+    implementation 'org.json:json:20171018'
 }
 
 application {
