--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation group: 'com.github.sharispe', name: 'slib-sml', version:'0.9.1'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
     implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.3'
-    implementation group: 'org.apache.commons', name: 'commons-lang', version: '3.12.0'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.slf4j:slf4j-simple:1.7.21'
