--- a/Project/app/bin/main/static/package.json
+++ b/Project/app/bin/main/static/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Front end application for project cs261 group 45",
   "main": "./static/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,8 +13,10 @@
     "@popperjs/core": "^2.8.2",
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-icons": "^1.3.0",
+    "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
